TextExporter: added msInspect and SpecArray feature file import
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.5@5741 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,7 @@ Main improvements of TOPP:
   - corrupt data checks: sorting is checked now, improved speed
 - Added new tool IDFileConverter, which can convert between identification file formats
 - Added TOPPAS, a tool for visual creation and execution of TOPP pipelines
+- TextImporter can now import SpecArray and msInspect feature files
 
 Main improvements of UTILS:
 - TODO ???
