--- a/CHANGELOG
+++ b/CHANGELOG
@@ -64,6 +64,7 @@ Detailed list of changes to specific OpenMS classes
   - DBConnection
     - The executeQuery(...) method no longer sets the internal pointer to the first record of the result.
       It is now positioned before the first record. A boolean flag was to switch to the old behaviour.
+	- SourceFile: changed native ID type to string
 
 Changes to the contrib package:
 - Added CoinMP 1.3.3
