Moved DB credentials files to binary path; VersionInfo: replased getVersionAndTime method by getTime method; Added UTILS tool OpenMSInfo
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.5@5798 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -69,6 +69,7 @@ Detailed list of changes to specific OpenMS classes
 Changes to the contrib package:
 - Added CoinMP 1.3.3
 - Added IMSlib 0.1.0
+- Update Xerces-C to revision 806068 of SVN trunk
 
 Bug fixes:
 - [2778461]: mzData files containing 'supDataArray' elements no longer crash OpenMS 
