Base64: split integer and float decoding; MzMLFile: integer arrays are now loaded into IntegerDataArrays of spectrum
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.5@5822 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -43,7 +43,8 @@ Detailed list of changes to specific OpenMS classes
   - MSSpectrum
     - added 'isSorted' method
     - renamed MetaDataArray to FloatDataArray
-    - added StringDataArray
+    - added IntegerDataArrays
+    - added StringDataArrays
   - DataValue: added constructor for std::string and QString
   - MetaInfo: setValue method takes only DataValue now
   - MetaInfoInterface: setMetaValue method takes only DataValue now
