--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,41 +29,42 @@ Main improvements of OpenMS C++ library:
 - mzML 1.1.0 support
 
 Detailed list of changes to specific OpenMS classes
-- New classes
-- Removed classes
+- New classes:
+  - TODO ???
+- Removed classes:
   - FeatureFinderAlgorithmWatershed
   - PeakIcon
   - FactoryProduct (replaced by DefaultParamHandler)
   - DSpectrum (all the functionalty was moved to MSSpectrum)
-- Renamed and moved classes
-  - Moved PersistentObject from FORMAT/ to FORMAT/DB/
-  - Renamed PepXMLFile to PepXMLFileMascot
-- Changes to Classes
+- Renamed and moved classes:
+  - moved PersistentObject from FORMAT/ to FORMAT/DB/
+  - renamed PepXMLFile to PepXMLFileMascot
+- Changes to Classes:
   - MSExperiment: added 'isSorted' method
-  - MSSpectrum
+  - MSSpectrum:
     - added 'isSorted' method
     - renamed MetaDataArray to FloatDataArray
     - added IntegerDataArrays
     - added StringDataArrays
-  - DataValue: added constructor for std::string and QString
-  - MetaInfo: setValue method takes only DataValue now
-  - MetaInfoInterface: setMetaValue method takes only DataValue now
-  - Param: setValue method takes only DataValue now
-  - ExperimentalSettings: Moved DataProcessing to SpectrumSettings (for mzML)
+  - DataValue: added constructor for 'std::string' and QString
+  - MetaInfo: 'setValue' method takes only DataValue now
+  - MetaInfoInterface: 'setMetaValue' method takes only DataValue now
+  - Param: 'setValue' method takes only DataValue now
+  - ExperimentalSettings: moved DataProcessing to SpectrumSettings (for mzML)
   - Precursor: supports multiple dissociation methods now (for mzML)
   - MetaInfoDescription: removed comment and source file; added data processing (for MzML)
-  - ElementDB: Isotopes are now possible
-  - EmpiricalFormula: Isotopes are now possible (e.g. (2)HO for deuterium)
-  - PepXMLFile: added new load method (moved the old load method to PepXMLFileMascot)
-  - TextFile
+  - ElementDB: isotopes are now possible
+  - EmpiricalFormula: isotopes are now possible (e.g. (2)HO for deuterium)
+  - PepXMLFile: added new 'load' method (moved the old 'load' method to PepXMLFileMascot)
+  - TextFile:
     - is now derived from StringList
-    - the asString() method was replaced by concatenate() from StringList
-  - MzMLFile: 
-    - Added support for integer and string binary arrays
-    - Added support for compressed binary data arrays 
-    - Loading a file with unknown CV terms in certain tags no longer causes an error
-  - DBConnection
-    - The executeQuery(...) method no longer sets the internal pointer to the first record of the result.
+    - the 'asString' method was replaced by 'concatenate' from StringList
+  - MzMLFile:
+    - added support for integer and string binary arrays
+    - added support for compressed binary data arrays 
+    - loading a file with unknown CV terms in certain tags no longer causes an error
+  - DBConnection:
+    - The 'executeQuery' method no longer sets the internal pointer to the first record of the result.
       It is now positioned before the first record. A boolean flag can be used to switch to the old behaviour.
 	- SourceFile: changed native ID type to string
 
