--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,22 +15,25 @@ Main improvements of TOPP:
 - FileFilter: 
   - added 'sort_peaks' option
   - added filtering according to spectrum type
+	- added selection of specific modes and spectrum types
 - FileInfo: 
   - added flag for data processing output
   - corrupt data checks: sorting is checked now, improved speed
 - Added new tool IDFileConverter, which can convert between identification file formats
 - Added TOPPAS, a tool for visual creation and execution of TOPP pipelines
 - TextImporter can now import SpecArray and msInspect feature files
+- Added CompNovo, a de novo identification tool for combined CID/ETD experiments
 
 Main improvements of UTILS:
-- TODO ???
+- Added PeptideIndexer, assign proteins to peptides including target/decoy specification
+- Added MRMPairFinder, ERPairFinder to extract ratios of labeled experiments
 
 Main improvements of OpenMS C++ library:
 - mzML 1.1.0 support
 
 Detailed list of changes to specific OpenMS classes
 - New classes:
-  - TODO ???
+  - CompNovo-classes
 - Removed classes:
   - FeatureFinderAlgorithmWatershed
   - PeakIcon
@@ -54,7 +57,9 @@ Detailed list of changes to specific OpenMS classes
   - Precursor: supports multiple dissociation methods now (for mzML)
   - MetaInfoDescription: removed comment and source file; added data processing (for MzML)
   - ElementDB: isotopes are now possible
-  - EmpiricalFormula: isotopes are now possible (e.g. (2)HO for deuterium)
+  - EmpiricalFormula: isotopes are now possible (e.g. (2)H for deuterium)
+	- ModificationsDB: switched completely to UniMod (www.unimod.org). PSI-MOD still provided
+		for convenience
   - PepXMLFile: added new 'load' method (moved the old 'load' method to PepXMLFileMascot)
   - TextFile:
     - is now derived from StringList
