--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,8 @@ Main improvements of TOPP:
 Main improvements of UTILS:
 - Added PeptideIndexer, assign proteins to peptides including target/decoy specification
 - Added MRMPairFinder, ERPairFinder to extract ratios of labeled experiments
+- Added IDMassAccurracy, given mzML files and identification, it calculates distributions
+	of mass deviations
 
 Main improvements of OpenMS C++ library:
 - mzML 1.1.0 support
@@ -72,6 +74,7 @@ Detailed list of changes to specific OpenMS classes
     - The 'executeQuery' method no longer sets the internal pointer to the first record of the result.
       It is now positioned before the first record. A boolean flag can be used to switch to the old behaviour.
 	- SourceFile: changed native ID type to string
+	- Changed precision of mass values of several classes
 
 Changes to the contrib package:
 - Added CoinMP 1.3.3
