--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,25 +14,25 @@ Main improvements of TOPP:
 - Added data processing information to all output files to improve traceability
 - FileFilter: 
   - added 'sort_peaks' option
-  - added filtering according to spectrum type
-	- added selection of specific modes and spectrum types
+  - added filtering according to scan type
+  - added filtering according to activation type
 - FileInfo: 
   - added flag for data processing output
   - corrupt data checks: sorting is checked now, improved speed
 - Added new tool IDFileConverter, which can convert between identification file formats
-- Added TOPPAS, a tool for visual creation and execution of TOPP pipelines
+- Added TOPPAS, a tool for visual creation and execution of TOPP pipelines (beta)
 - TextImporter can now import SpecArray and msInspect feature files
 - Added CompNovo, a de novo identification tool for combined CID/ETD experiments
 
 Main improvements of UTILS:
 - Added PeptideIndexer, assign proteins to peptides including target/decoy specification
 - Added MRMPairFinder, ERPairFinder to extract ratios of labeled experiments
-- Added IDMassAccurracy, given mzML files and identification, it calculates distributions
-	of mass deviations
+- Added IDMassAccurracy, given mzML files and identification, it calculates distributions of mass deviations
 
 Main improvements of OpenMS C++ library:
 - mzML 1.1.0 support
-
+- Improved the precision of mass values in several file formats
+  
 Detailed list of changes to specific OpenMS classes
 - New classes:
   - CompNovo-classes
@@ -60,8 +60,7 @@ Detailed list of changes to specific OpenMS classes
   - MetaInfoDescription: removed comment and source file; added data processing (for MzML)
   - ElementDB: isotopes are now possible
   - EmpiricalFormula: isotopes are now possible (e.g. (2)H for deuterium)
-	- ModificationsDB: switched completely to UniMod (www.unimod.org). PSI-MOD still provided
-		for convenience
+  - ModificationsDB: switched completely to UniMod (www.unimod.org). PSI-MOD still provided for convenience
   - PepXMLFile: added new 'load' method (moved the old 'load' method to PepXMLFileMascot)
   - TextFile:
     - is now derived from StringList
@@ -73,8 +72,7 @@ Detailed list of changes to specific OpenMS classes
   - DBConnection:
     - The 'executeQuery' method no longer sets the internal pointer to the first record of the result.
       It is now positioned before the first record. A boolean flag can be used to switch to the old behaviour.
-	- SourceFile: changed native ID type to string
-	- Changed precision of mass values of several classes
+  - SourceFile: changed native ID type to string
 
 Changes to the contrib package:
 - Added CoinMP 1.3.3
