--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,6 +30,7 @@ Main improvements of UTILS:
 - Added MRMPairFinder, ERPairFinder to extract ratios of labeled experiments
 - Added IDMassAccurracy, given mzML files and identification, it calculates distributions of mass deviations
 - Added MapAlignmentEvaluation, a tool to evaluate alignment results
+- Added MSSimulator, a highly configurable simulator for mass spectrometry experiments
 
 Main improvements of OpenMS C++ library:
 - mzML 1.1.0 support
@@ -39,6 +40,7 @@ Detailed list of changes to specific OpenMS classes
 - New classes:
   - CompNovo-classes
   - StablePairFinder, which is now used by MapAligner and FeatureLinker
+  - Simulation-classes
 - Removed classes:
   - FeatureFinderAlgorithmWatershed
   - PeakIcon
