--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,25 @@
 ------------------------------------------------------------------------------------------
+----                                  OpenMS 1.6                                      ----
+------------------------------------------------------------------------------------------
+
+Main improvements of TOPPView:
+ - Storing peak data is now possible in mzData, mzXML and mzML format
+
+Main improvements of TOPP:
+
+Main improvements of UTILS:
+
+Main improvements of OpenMS C++ library:
+  
+Detailed list of changes to specific OpenMS classes
+
+Changes to OpenMS XML formats:
+
+Changes to the contrib package:
+
+Bug fixes:
+
+------------------------------------------------------------------------------------------
 ----                                  OpenMS 1.5                                      ----
 ------------------------------------------------------------------------------------------
 
