Added bug to CHANGELOG
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@5938 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -18,7 +18,8 @@ Changes to OpenMS XML formats:
 Changes to the contrib package:
 
 Bug fixes:
-- [2849201: Parameters in INI files are duplicated
+- [2849201]: Parameters in INI files are duplicated
+- [2849439]: Compilation error with Qt 4.3.x
 
 ------------------------------------------------------------------------------------------
 ----                                  OpenMS 1.5                                      ----
