PoseClusteringShiftSuperimposer rewritten as a simplified version of PoseClusteringAffineSuperimposer
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@5993 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,8 @@ Detailed list of changes to specific OpenMS classes
 - IDMapper:
   - uses bounding boxes of mass traces instead of convex hulls now
   - the given deltas are used for features with convex hulls as well
+- PoseClusteringShiftSuperimposer:
+  - full rewrite, uses a similar algorithm like PoseClusteringAffineSuperimposer now
  
 Changes to OpenMS XML formats:
 
