--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,10 +16,13 @@ Main improvements of TOPP:
   - supports parallel execution now
   - supports user-specified seeds now
 Main improvements of UTILS:
+- UniqueIdAssigner can be used to assign unique ids to FeatureXML and ConsensusXML files
 
 Main improvements of OpenMS C++ library:
   
 Detailed list of changes to specific OpenMS classes
+- New classes:
+  - UniqueIdGenerator, UniqueIdInterface, UniqueIdIndexer
 - String:
   - improved behaviour of split(...) method
   - added support for quoting and unquoting of strings
@@ -40,6 +43,7 @@ Changes to the Build System:
 - SVN Revision (if available) is determined and compiled into OpenMS before the library is build
 	
 Changes to OpenMS XML formats:
+- FeatureXML and ConsensusXML files use unique ids now instead of running indices
 
 Changes to the contrib package:
 - Updated GSL to version 1.13
