--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,15 +8,21 @@ Main improvements of TOPPView:
 - Added new label mode for feature layers: all peptide hits of a feature are displayed
 - Added visualization of unassigned peptide hits for feature layers
 - Measuring to arbitrary end points is now supported in 1D and 2D view
+- file load progress bar stays responsive under load on Windows
 
-Main improvements of TOPP:
+Main improvements of TOPP-Framework:
 - TOPP tools now warn when used with parameter files from a different version
+- Combining '-write_ini' and '-ini' option now allows to transfer settings with 
+	identical path&names from an old ini file into a new one.
+
+Main improvements of TOPP-Tools:
 - IDMapper assigns more peptides to features with convex hulls (the deltas are used)
 - FeatureFinder (centroided algorithm)
   - supports parallel execution now
   - supports user-specified seeds now
 - new tool: SeedListGenerator
   - generates seed lists for feature detection (still experimental)
+- TextImporter can now import Koenik(Hardkloer) feature files
 - TextExporter
   - added option for string quoting
   - improved export of consensusXML
@@ -28,7 +34,8 @@ Main improvements of UTILS:
 - UniqueIdAssigner can be used to assign unique ids to FeatureXML and ConsensusXML files
 
 Main improvements of OpenMS C++ library:
-  
+- MGF file creation speedup (also affects some TOPP tools)
+
 Detailed list of changes to specific OpenMS classes
 - New classes:
   - UniqueIdGenerator, UniqueIdInterface, UniqueIdIndexer
@@ -61,6 +68,8 @@ Changes to OpenMS XML formats:
 
 Changes to the contrib package:
 - Updated GSL to version 1.13
+- Updated SVM to version 2.89
+- Added Z lib and bz2 lib
 
 Bug fixes:
 - [2849201]: Parameters in INI files are duplicated
