--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,9 +19,11 @@ Main improvements of TOPP-Tools:
 - IDMapper
 	- has new default m/z tolerance and uses ppm as new default measure! Da is still supported.
 	- assigns more peptides to features with convex hulls (the deltas are used)
-- FeatureFinder (centroided algorithm)
-  - supports parallel execution now
-  - supports user-specified seeds now
+- FeatureFinder 
+	- Centroided
+		- supports parallel execution now
+		- supports user-specified seeds now
+	- Wavelet: removed (Isotope-Wavelet is still available)
 - new tool: SeedListGenerator
   - generates seed lists for feature detection (still experimental)
 - TextImporter can now import Koenik(Hardkloer) feature files
@@ -40,6 +42,7 @@ Main improvements of UTILS:
 
 Main improvements of OpenMS C++ library:
 - MGF file creation speedup (also affects some TOPP tools)
+- removed FeatureFinder-Wavelet, Isotope-Wavelet is still available
 
 Detailed list of changes to specific OpenMS classes
 - New classes:
@@ -47,6 +50,8 @@ Detailed list of changes to specific OpenMS classes
   - SVOutStream
   - MapAlignmentAlgorithmIdentification
   - SeedListGenerator
+- Removed classes:
+  - FeatureFinderAlgorithmWavelet	
 - String:
   - improved behaviour of split(...) method
   - added support for quoting and unquoting of strings
