added TOPPAS update to Changelog
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.6@6431 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@ Main improvements of TOPPView:
 - rudimentary chromatogram support
 
 Main improvements of TOPP-Framework:
+- Major update of TOPPAS
 - TOPP tools now warn when used with parameter files from a different version
 - Combining '-write_ini' and '-ini' option now allows to transfer settings with 
 	identical path&names from an old ini file into a new one.
