--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,36 +15,42 @@ Main improvements of TOPPView:
 Main improvements of TOPP-Framework:
 - Major update of TOPPAS
 - TOPP tools now warn when used with parameter files from a different version
-- Combining '-write_ini' and '-ini' option now allows to transfer settings with 
-	identical path&names from an old ini file into a new one.
+- Combining '-write_ini' and '-ini' option now allows to transfer settings with identical
+  path and names from an old ini file into a new one.
 
 New TOPP tools:
 - SeedListGenerator
   - generates seed lists for feature detection (still experimental)
 - PrecursorMassCorrector
-	- update precursor m/z information of MS/MS spectra based on MS1 peptide isotope fits (still experimental)
+  - update precursor m/z information of MS/MS spectra based on MS1 peptide isotope fits
+    (still experimental)
 	
 Main improvements of TOPP-Tools:
 - all tools:
-	- gzipped and bzipped XML files (e.g. mzML) can be directly read
+  - gzipped and bzipped XML files (e.g. mzML) can be directly read
 - FeatureFinder 
-	- Centroided
-		- supports parallel execution now
-		- supports user-specified seeds now
-	- Wavelet: removed (Isotope-Wavelet is still available)
-- FileMerger: accumulated processingMethod entries, which all contained the same information
+  - Centroided
+    - supports parallel execution now
+    - supports user-specified seeds now
+    - Wavelet: removed (Isotope-Wavelet is still available)
+- FileMerger: accumulated processingMethod entries, which all contained the same 
+  information
 - IDMapper
-	- has new default m/z tolerance and uses ppm as new default measure! Da is still supported.
-	- referenze m/z of ID can now be either: 1) precursor mass, 2) [new] mass of identified peptide
-	- assigns more peptides to features with convex hulls (the deltas are used)
+  - has new default m/z tolerance and uses ppm as new default measure! Da is still 
+    supported.
+  - referenze m/z of ID can now be either: 1) precursor mass, 2) [new] mass of identified
+    peptide
+  - assigns more peptides to features with convex hulls (the deltas are used)
 - InternalCalibration
-  - supports calibration functions calculated seperately for each spectrum or one global function
+  - supports calibration functions calculated seperately for each spectrum or one global
+    function
   - supports peptide ids as reference peaks
   - works on peak or feature data now
 - MapAligner
-  - new "identification" algorithm for alignment based on identified peptides (still experimental)
+  - new "identification" algorithm for alignment based on identified peptides
+    (still experimental)
 - PeakPicker
-	- support for automatic estimation of peak width
+  - support for automatic estimation of peak width
 - TextImporter can now import Koenik(Hardkloer) feature files
 - TextExporter
   - added option for string quoting
@@ -59,11 +65,11 @@ Main improvements of UTILS:
 
 Main improvements of OpenMS C++ library:
 - MGF file creation speedup (also affects some TOPP tools)
-- removed FeatureFinder-Wavelet, Isotope-Wavelet is still available
+- removed FeatureFinder-Wavelet (IsotopeWavelet is still available)
 - support for bzip2 and gzip compressed XML files
 - chromatogram support
-- Comments and other strings of XML writers are now escaped to prevent reading problems
-- IdXMLFile segmentation fault if no protein identification given fixed
+- comments and other strings of XML writers are now escaped to prevent reading problems
+- fixed IdXMLFile segmentation fault if no protein identification given
 
 Detailed list of changes to specific OpenMS classes
 - [New classes]:
@@ -74,7 +80,7 @@ Detailed list of changes to specific OpenMS classes
 - [Removed classes]:
   - FeatureFinderAlgorithmWavelet	
 - [Renamed classes]:
-	- IDMapper -> DocumentIDMapper
+  - IDTagger -> DocumentIDTagger
 - String:
   - improved behaviour of split(...) method
   - added support for quoting and unquoting of strings
@@ -88,24 +94,27 @@ Detailed list of changes to specific OpenMS classes
   - added cubic b-spline transformation
   - PairsType uses DoubleReal instead of Real now, thus can be used for m/z as well
 - VersionInfo:
-	- includes (if available) SVN Revision number that the library is build upon
-	  via support by the Build System.
-    - SVN Revision information is displayed in the TOPP tools help text.
-- PepXMLFile: handling of PTMs now better
+  - includes (if available) SVN revision number that the library is build upon via support
+    by the build system
+  - SVN revision information is displayed in the TOPP tools help text
+- PepXMLFile: improved handling of PTMs
 	
 Changes to the Build System:
-- Unit tests are now in a separate sub-project in <OpenMS/source/TEST/> avoiding huge Solution files in MSVC IDE
+- unit tests are now in a separate sub-project in <OpenMS/source/TEST/> avoiding huge 
+  Solution files in MSVC IDE
 - new targets: test_build, tutorials_build, tutorials_exec
-- SVN Revision (if available) is determined and compiled into OpenMS before the library is build
+- SVN revision (if available) is determined and compiled into OpenMS before the library is
+  built
 - added real install prefix and install target to be able to do a 'make install'
-	
+
 Changes to OpenMS XML formats:
-- FeatureXML and ConsensusXML files use unique ids now instead of running indices. New XML Schema versions: 1.4
+- FeatureXML and ConsensusXML files use unique ids now instead of running indices. New XML
+  Schema versions: 1.4
 
 Changes to the contrib package:
-- Updated GSL to version 1.13
-- Updated SVM to version 2.89
-- Added Z lib and bz2 lib
+- updated GSL to version 1.13
+- updated SVM to version 2.89
+- added Z lib and bz2 lib
 
 Bug fixes:
 
