updated head version to OpenMS 1.7 (CMakeLists.txt, SplashScreens, Contrib Version, Mac OS Installer imgs .. hope that was all)
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6449 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------------------
+----                                  OpenMS 1.7                                      ----
+------------------------------------------------------------------------------------------
+
+
+
+------------------------------------------------------------------------------------------
 ----                                  OpenMS 1.6                                      ----
 ------------------------------------------------------------------------------------------
 Release date: Nov 19th 2009
