** cleanup ** moved configuration of tests to cmake/TestConfig.cmake
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6524 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,29 @@
 ----                                  OpenMS 1.7                                      ----
 ------------------------------------------------------------------------------------------
 
+Changes to TOPP tools:
+- Resampler
+	- PNG image creation functionality removed and transferred to ImageCreator UTIL
 
+New UTIL tools:
+- ImageCreator (creates PNG's from an MS map)
+
+
+Changes to the Build System:
+- external code support for CMake 2.8; External Code using 
+  "include (${OpenMS_USE_FILE})" in its CMakeLists.txt 
+  cannot be configured against OpenMS 1.7, however, 
+  only minor changes are required to fix this.
+  See the documentation for "Programming with OpenMS".
+
+BugFixes:
+[new tracker: http://sourceforge.net/apps/trac/open-ms/query?status=closed&group=resolution&milestone=Release+1.7]
+- #44 : TOPPView warning "Cannot show projections!"
+- #73 : Resampler: can't create PNGs with TOPPAS
+- #74 : Default parameters of PTModel cause infinite loop
+- #77 : FuzzyDiff always returns 'true' when comparing any two PNG images
+
+For more minor bugfixes visit the above URL.
 
 ------------------------------------------------------------------------------------------
 ----                                  OpenMS 1.6                                      ----
