FeatureHandle: element index replaced by unique id
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6654 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,6 +26,12 @@ BugFixes:
 
 For more minor bugfixes visit the above URL.
 
+
+Detailed list of changes to specific OpenMS classes:
+- ConsensusMap, FeatureHandle, ConsensusFeature:
+  - element index replaced by unique id
+
+
 ------------------------------------------------------------------------------------------
 ----                                  OpenMS 1.6                                      ----
 ------------------------------------------------------------------------------------------
