** removed TextImporter ** more robust file import
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6778 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,9 @@ TOPP tools:
 	- merges featureXML
 - NEW: 
 	- GenericWrapper (e.g. to wrap ProteinProphet in TOPPAS)
-
+- REMOVE:
+  - TextImporter was removed; the functionality was moved to FileConverter
+  
 UTIL tools:
 - NEW:
 	- ImageCreator (creates PNG's from an MS map)
