fixed #215 and #217 in 1.7 branch
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.7@7579 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,7 @@ Fixed Issues:
 - fixed BaselineFilter, NoiseFilter, PeakPicker bugs when handling empty and chromatogram data
 - fixed improper error messages for FeatureFinder-MRM
 - fixed FileFilter not sorting filtered ConsensusMap even if sort parameter was given
-
+- fixed "Caching in LogStream is not thread safe" (#215,#217)
 ------------------------------------------------------------------------------------------
 ----                                  OpenMS 1.7                                      ----
 ------------------------------------------------------------------------------------------
