--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,7 +7,132 @@ INI file - parameter configuration file, holding custom parameter settings for T
 INIFileEditor - graphical parameter editor for INI files
 
 ------------------------------------------------------------------------------------------ 
-----                                  OpenMS 1.10                                      ---- 
+----                                  OpenMS 1.11                                     ---- 
+------------------------------------------------------------------------------------------ 
+Release date: August 2013
+
+OpenMS 1.11 is the first release with fully integrated Python bindings (termed pyOpenMS). 
+For further details, please refer to https://pypi.python.org/pypi/pyopenms
+
+File formats:
+- QcML support
+- pepXML exported from Mascot (added support)
+- mzTab updated to 1.0RC3
+- ParamXML updated to v 1.6.2
+- support for CTD schema 0.3
+- full support of sourceFile tag in mzML (all source files are written, SHA1 support)
+
+TOPPView:
+- handle .mzML file with mixed spectra and chromatograms (prefer spectra)
+- chromatograms of all types can be displayed (not just SRM)
+- link to documentation and webpage fixed
+- fix a segfault when loading empty chromatograms into TOPPView
+
+TOPPAS:
+- link to documentation and webpage fixed
+
+TOPP tools:
+- MODIFIED:
+  - FeatureLinkerUnlabeledQT: performance (speed and memory) improvement 
+  - FeatureLinkerUnlabeled: performance (memory) improvement (now constant in number of input maps)
+  - MapAlignerPoseClustering: performance (memory) improvement (now constant in number of input maps)
+  - EICExtractor: critical bugfix if the input map was not sorted
+  - PeptideIndexer: by default now demands that the peptide is fully tryptic ("-enzyme:specificity none" restores the old behavior)
+  - FileFilter: filter MS2 spectra by consensus map feature overlap, collision energy, isolation window width
+  - ProteinResolver: documentation and interface improvements
+  - QCCalculator/QCEmbedder/QCExtractor: multiple improvements
+  - WindowMower: speed improvement (movetype either slide or jump [faster])
+- ADDED
+  - AccurateMassSearch: AccurateMassSearch assembles metabolite features from singleton mass traces.
+  - IsobaricAnalyzer: Extracts and normalizes isobaric labeling information from an MS experiment. This merges the previous TMTAnalyzer and ITRAQAnalyzer functionality
+  - QCExtractor: Extracts a table attachment to a given qc parameter
+  - QCImporter: Embed tables or pictures in QcML
+
+General:
+- Python bindings allow full access to the OpenMS API from Python 
+- TOPPTools now support passing of all parameters on the command line (use --helphelp)
+- Better chromatogram support (for NoiseFilterGaussian, NoiseFilterSGolay, PeakPickerHiRes)
+
+Search engine support:
+- Mascot 2.4 is now supported
+- OMSSAAdapter with improved memory footprint
+- N-terminal modifications work now with X!Tandem
+
+Changes to the Build System / Package System:
+- shared linking works for all contrib packages with automated detection using CMake find modules 
+- upgrade of xerces to version 3.1.1
+- upgrade of libsvm to version 3.12
+
+Development:
+- public inheritance from std::vector and std::set has been reduced in the
+  OpenMS codebase (removed from ConsensusFeature, FeatureMap, ConsensusMap,
+  MSExperiment)
+- addition of the OpenMS/INTERFACES folder which contains proposed OpenMS
+  interfaces for reading/writing spectra
+
+Deprecated:
+- TMTAnalyzer, ITRAQAnalyzer -> please use IsobaricAnalyzer instead
+- Several functions provided by std::vector in the MSSpectrum interface are now
+  deprecated (e.g. push_back, reserve etc.)
+
+Resolved issues:
+  #593	Parameter default of 'tab' will be returned as single space
+  #576	Cython 0.19 does not compile current pyOpenMS
+  #553	TOPPView's Apply TOPP tool functionality is broken
+  #580	"XTandemAdapter finds non-tryptic peptides although cleavage rule is set to ""[RK]|{P}"""
+  #524	PeptideIndexer does not honor cleavage sites
+  #525	EICExtractor will report wrong intensities if input map is not sorted
+  #556	Setting parameter may not take effect
+  #151	Optimize time/memory efficiency of critical tools/algorithms
+  #184	Some OpenMS classes are derived from std::vector
+  #343	OpenMS build system should allow searching for contrib libs also in system paths (e.g., /opt/local/..)
+  #382	Excessive memory usage by MapAligners and FeatureLinkers
+  #457	Use system libraries instead of contrib
+  #519	Merge ITRAQAnalyzer and TMTAnalyzer
+  #520	Support linking against shared libs
+  #521	Upgrade contrib libsvm
+  #522	Make parameters from subsections addressable from command line
+  #527	pyOpenMS compile issue with clang
+  #531	Upgrade xerces-c version in contrib to 3.1.1
+  #533	pyOpenMS
+  #534	MascotAdapterOnline does not support Mascot 2.4
+  #535	mzML with Spectra and Chromatograms
+  #536	MascotAdapterOnline ssl and Mascot 2.4
+  #537	Invalid Doxygen XML Files
+  #540	IsobaricAnalyzer
+  #541	AccurateMassSearch
+  #549	Problems converting Mascot XML to idXML
+  #552	pyOpenMS build system
+  #554	FeatureLinkerUnlabeled(QT) - Speed/Memory enhancements
+  #557	XTandemAdapter/mz-out scramble
+  #565	X!TandemAdapter fails to add terminal modifications correctly to XTandem search
+  #569	Segfault of IDEvaluator and IDEvaluatorGUI
+  #570	FeatureLinkerUnlabeledQT regression
+  #574	Update ParamXMLHandler to support v1.6.2 of Param schema
+  #575	Upgrade TOPPBase's CTD support to new version of CTD schema
+  #578	Add qcML cv terms
+  #582	Compile error with boost 1.46
+  #583	MascotAdapterOnline with Mascot 2.4.0 may never finish
+  #584	FileFilter -Parameter - mz (mz range to extract) --- Applies to all MS levels !!!  and not to a specified level !!!
+  #586	ModificationsDB_test relies on raw memory addresses
+  #587	MascotAdapterOnline does not support SSL connections
+  #588	MascotAdapterOnline does not support connections to public matrixscience mascot instance
+  #591	Detection of MGF format via file content fails on our own files
+  #120	Improve visual representation of edges
+  #309	FileConverter puts incorrect/incomplete information in <sourceFile>
+  #398	INIFileEditor doesn't save modified values if still in edit mode
+  #465	"""-debug"" option in TOPP tools doesn't show LOG_DEBUG messages"
+  #497	Non-intuitive way to edit parameters in TOPPView/TOPPAS/INIFileEditor
+  #516	Refresh parameters complains if no input files are present.
+  #517	MSQuantification::load declared but not implemented
+  #523	Link to OpenMS website from within TOPPAS/TOPPView broken
+  #544	FeatureXML Version at 1.4 while 1.6 is the current version
+  #562	cmake doesn't check for MSBuild.exe location on windows
+  #529	Strange naming of TextExporter parameters
+  #542	TOPPView: switch to 3D view should pick the data layer automatically
+  
+------------------------------------------------------------------------------------------ 
+----                                  OpenMS 1.10                                     ---- 
 ------------------------------------------------------------------------------------------ 
 Release date: March 2013
 
