--- a/CHANGELOG
+++ b/CHANGELOG
@@ -76,60 +76,61 @@ Deprecated:
   deprecated (e.g. push_back, reserve etc.)
 
 Resolved issues:
-  #593	Parameter default of 'tab' will be returned as single space
-  #576	Cython 0.19 does not compile current pyOpenMS
-  #553	TOPPView's Apply TOPP tool functionality is broken
-  #580	"XTandemAdapter finds non-tryptic peptides although cleavage rule is set to ""[RK]|{P}"""
-  #524	PeptideIndexer does not honor cleavage sites
-  #525	EICExtractor will report wrong intensities if input map is not sorted
-  #556	Setting parameter may not take effect
+  #120	Improve visual representation of edges
   #151	Optimize time/memory efficiency of critical tools/algorithms
   #184	Some OpenMS classes are derived from std::vector
+  #309	FileConverter puts incorrect/incomplete information in <sourceFile>
   #343	OpenMS build system should allow searching for contrib libs also in system paths (e.g., /opt/local/..)
   #382	Excessive memory usage by MapAligners and FeatureLinkers
+  #398	INIFileEditor doesn't save modified values if still in edit mode
   #457	Use system libraries instead of contrib
+  #465	"-debug" option in TOPP tools doesn't show LOG_DEBUG messages
+  #497	Non-intuitive way to edit parameters in TOPPView/TOPPAS/INIFileEditor
+  #516	TOPPAS: "Refresh parameters" complains if no input files are present
+  #517	MSQuantification::load declared but not implemented
   #519	Merge ITRAQAnalyzer and TMTAnalyzer
   #520	Support linking against shared libs
   #521	Upgrade contrib libsvm
   #522	Make parameters from subsections addressable from command line
+  #523	Link to OpenMS website from within TOPPAS/TOPPView broken
+  #524	PeptideIndexer does not honor cleavage sites
+  #525	EICExtractor will report wrong intensities if input map is not sorted
   #527	pyOpenMS compile issue with clang
+  #529	Strange naming of TextExporter parameters
   #531	Upgrade xerces-c version in contrib to 3.1.1
   #533	pyOpenMS
   #534	MascotAdapterOnline does not support Mascot 2.4
   #535	mzML with Spectra and Chromatograms
-  #536	MascotAdapterOnline ssl and Mascot 2.4
+  #536	MascotAdapterOnline SSL and Mascot 2.4
   #537	Invalid Doxygen XML Files
   #540	IsobaricAnalyzer
   #541	AccurateMassSearch
+  #542	TOPPView: switch to 3D view should pick the data layer automatically
+  #544	featureXML version at 1.4 while 1.6 is the current version
   #549	Problems converting Mascot XML to idXML
   #552	pyOpenMS build system
-  #554	FeatureLinkerUnlabeled(QT) - Speed/Memory enhancements
+  #553	TOPPView's "Apply TOPP tool" functionality is broken
+  #554	FeatureLinkerUnlabeled(QT) - speed/memory enhancements
+  #556	Setting parameter may not take effect
   #557	XTandemAdapter/mz-out scramble
-  #565	X!TandemAdapter fails to add terminal modifications correctly to XTandem search
+  #562	cmake doesn't check for MSBuild.exe location on Windows
+  #565	XTandemAdapter fails to add terminal modifications correctly to X!Tandem search
   #569	Segfault of IDEvaluator and IDEvaluatorGUI
   #570	FeatureLinkerUnlabeledQT regression
   #574	Update ParamXMLHandler to support v1.6.2 of Param schema
   #575	Upgrade TOPPBase's CTD support to new version of CTD schema
-  #578	Add qcML cv terms
-  #582	Compile error with boost 1.46
+  #576	Cython 0.19 does not compile current pyOpenMS
+  #578	Add qcML CV terms
+  #580	XTandemAdapter finds non-tryptic peptides although cleavage rule is set to "[RK]|{P}"
+  #582	Compile error with Boost 1.46
   #583	MascotAdapterOnline with Mascot 2.4.0 may never finish
-  #584	FileFilter -Parameter - mz (mz range to extract) --- Applies to all MS levels !!!  and not to a specified level !!!
+  #584	FileFilter parameter -mz (mz range to extract) applies to all MS levels and not to a specified level
   #586	ModificationsDB_test relies on raw memory addresses
   #587	MascotAdapterOnline does not support SSL connections
-  #588	MascotAdapterOnline does not support connections to public matrixscience mascot instance
+  #588	MascotAdapterOnline does not support connections to public MatrixScience Mascot instance
   #591	Detection of MGF format via file content fails on our own files
-  #120	Improve visual representation of edges
-  #309	FileConverter puts incorrect/incomplete information in <sourceFile>
-  #398	INIFileEditor doesn't save modified values if still in edit mode
-  #465	"""-debug"" option in TOPP tools doesn't show LOG_DEBUG messages"
-  #497	Non-intuitive way to edit parameters in TOPPView/TOPPAS/INIFileEditor
-  #516	Refresh parameters complains if no input files are present.
-  #517	MSQuantification::load declared but not implemented
-  #523	Link to OpenMS website from within TOPPAS/TOPPView broken
-  #544	FeatureXML Version at 1.4 while 1.6 is the current version
-  #562	cmake doesn't check for MSBuild.exe location on windows
-  #529	Strange naming of TextExporter parameters
-  #542	TOPPView: switch to 3D view should pick the data layer automatically
+  #593	Parameter default of 'tab' will be returned as single space
+  #598  SILACAnalyzer (no label) crash
   
 ------------------------------------------------------------------------------------------ 
 ----                                  OpenMS 1.10                                     ---- 
