[DOC] added #603 to list of fixed bugs (addendum to r11699)
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.11@11700 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -131,6 +131,7 @@ Resolved issues:
   #591	Detection of MGF format via file content fails on our own files
   #593	Parameter default of 'tab' will be returned as single space
   #598  SILACAnalyzer (no label) crash
+  #603  TOPPView: showing peptide annotations of feature maps also shows feature indexes
   
 ------------------------------------------------------------------------------------------ 
 ----                                  OpenMS 1.10                                     ---- 
